2007-04-01  Richard Frith-Macdonald  <rfm@gnu.org>

	* GSCache.m:
	* GSThroughput.m:
	* GSSkipMutableArray.m:
	* GSTicker.m:
	Changes to avoid compiler warnings on MacOS-X

2006-11-11  Matt Rice <ratmice@gmail.com>

	* GSMutableSkipArray.m: Fix bug when deallocating an empty list.

2006-11-11  Richard Frith-Macdonald  <rfm@gnu.org>

	* GSThroughput.h: New ([add:duration:]) method.
	* GSThroughput.m: Method to add multiple events with a total
	duration (eg where recording individual event times has too
	high an overhead).

2006-11-09  Richard Frith-Macdonald  <rfm@gnu.org>

	* GNUmakefile: update version
	* GSThroughput.m: Allow use to keep running totals of stats

2006-09-27  Richard Frith-Macdonald  <rfm@gnu.org>

	* GNUmakefile:
	* GSIndexedSkipList.m:
	* GSSkipMutableArray.h:
	* GSSkipMutableArray.m:
	Minor fix to (hopefully) build on windows.
	Hide implementation details.
	Add convenience method (to create skiplist) to NSMutableArray.
	Some reformatting for coding standards.
	* Performance.h: Ad new header for skip lists.

2006-09-27  Matt Rice <ratmice@yahoo.com>
	
	* GSSkipMutableArray.[hm]: New NSMutableArray subclass. 
	* GSIndexedSkipList.[hm]: Underlying C implementation.

2006-06-07 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSCache.h:
	* GSCache.m:
	New convenience method to cache an item until a date.

2006-01-11  Nicola Pero <nicola@brainstorm.co.uk>

	* GNUmakefile.wrapper.objc.preamble: New file that fixes the
	"/usr/bin/ld: cannot find -lPerformance" error when linking Java
	wrappers.

2005-10-28 Richard Frith-Macdonald  <rfm@gnu.org>

	New Performance library (0.1) 